--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -168,7 +168,7 @@
                 <div class="paging" style="text-align: center">
                   <a class="changePage" style="color: black"><code><</code></a>
                   <code id="currentPage">1</code>
-                    <a class="changePage" style="color: black"}"><code>2</code></a>
+                    <a class="changePage" style="color: black"><code>2</code></a>
                   <a class="changePage"style="color: black"><code>></code></a>
                 </div>
                 <form name="pageForm">
@@ -263,5 +263,5 @@
       ],
     });
   </script>
-  <script src="/static/js/admin/notice.js"></script>
+  <script src="/js/admin/notice.js"></script>
 </html>
