--- a/src/main/resources/templates/admin/sponsorship-request.html
+++ b/src/main/resources/templates/admin/sponsorship-request.html
@@ -220,7 +220,7 @@
                 <div class="paging" style="text-align: center">
                   <a class="changePage" style="color: black"><code><</code></a>
                   <code id="currentPage">1</code>
-                    <a class="changePage" style="color: black"}"><code>2</code></a>
+                    <a class="changePage" style="color: black"><code>2</code></a>
                   <a class="changePage"style="color: black"><code>></code></a>
                 </div>
                 <form name="pageForm">
@@ -362,7 +362,7 @@
                   <div class="paging" style="margin-top: 28px; margin-bottom: -57px; text-align: center;">
                     <a class="changePage" style="color: black"><code><</code></a>
                     <code id="currentPage">1</code>
-                      <a class="changePage" style="color: black"}"><code>2</code></a>
+                      <a class="changePage" style="color: black"><code>2</code></a>
                     <a class="changePage"style="color: black"><code>></code></a>
                   </div>
                   <form name="pageForm">
