--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -218,7 +218,7 @@
               <div class="paging" style="text-align: center">
                 <a class="changePage" style="color: black"><code><</code></a>
                 <code id="currentPage">1</code>
-                  <a class="changePage" style="color: black"}"><code>2</code></a>
+                  <a class="changePage" style="color: black"><code>2</code></a>
                 <a class="changePage"style="color: black"><code>></code></a>
               </div>
               <form name="pageForm">
@@ -266,21 +266,27 @@
             <div class="modal__profile__top">
               <h4>수정 불가</h4>
               <div class="user__profile">
-                <h5>아이디</h5>
+                <h5>이메일</h5>
                 <div class="user__profile__input">
-                  <input type="text" name="" value="example1234" />
+                  <input type="text" name="" value="example1234@gmail.com" readonly/>
                 </div>
               </div>
               <div class="user__profile">
-                <h5>가입일</h5>
+                <h5>나이</h5>
                 <div class="user__profile__input">
-                  <input type="text" name="" value="2023-01-01" readonly="true" />
+                  <input type="text" name="" value="24" readonly/>
                 </div>
               </div>
               <div class="user__profile">
                 <h5>공양미 갯수</h5>
                 <div class="user__profile__input">
-                  <input type="text" name="" value="3000개" readonly="true" />
+                  <input type="text" name="" value="3000개" readonly/>
+                </div>
+              </div>
+              <div class="user__profile">
+                <h5>회원가입 방식</h5>
+                <div class="user__profile__input">
+                  <input type="text" name="" value="일반" readonly/>
                 </div>
               </div>
             </div>
@@ -289,25 +295,25 @@
               <div class="user__profile">
                 <h5>이름</h5>
                 <div class="user__profile__input">
-                  <input type="text" name="" value="홍길동" readonly="true" />
+                  <input type="text" name="" value="홍길동"/>
                 </div>
               </div>
               <div class="user__profile">
-                <h5>성별</h5>
+                <h5>주소</h5>
                 <div class="user__profile__input">
-                  <input type="text" name="" value="성별" readonly="true" />
+                  <input type="text" name="" value="주소"/>
                 </div>
               </div>
               <div class="user__profile">
-                <h5>이메일</h5>
+                <h5>관심 봉사</h5>
                 <div class="user__profile__input">
-                  <input type="text" name="" value="example@gmail.com" />
+                  <input type="text" name="" value="관심 봉사" />
                 </div>
               </div>
               <div class="user__profile">
-                <h5>전화번호</h5>
+                <h5>봉사활동 시간</h5>
                 <div class="user__profile__input">
-                  <input type="text" name="" value="01012341234" />
+                  <input type="text" name="" value="봉사활동 시간"/>
                 </div>
               </div>
             </div>
