--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/admin/default.css" />
     <link rel="stylesheet" href="/css/admin/sidebar.css" />
     <link rel="stylesheet" href="/css/admin/content.css" />
-    <link rel="stylesheet" href="css/admin/status.css" />
+    <link rel="stylesheet" href="/css/admin/status.css" />
     <link rel="stylesheet" href="/css/admin/paging.css">
     <link rel="stylesheet" href="/css/admin/volunteer.css">
 
@@ -215,7 +215,7 @@
                 <div class="paging" style="text-align: center">
                   <a class="changePage" style="color: black"><code><</code></a>
                   <code id="currentPage">1</code>
-                    <a class="changePage" style="color: black"}"><code>2</code></a>
+                    <a class="changePage" style="color: black"><code>2</code></a>
                   <a class="changePage"style="color: black"><code>></code></a>
                 </div>
                 <form name="pageForm">
@@ -447,7 +447,7 @@
                   <div class="paging" style="margin-top: 28px; margin-bottom: -57px; text-align: center;">
                     <a class="changePage" style="color: black"><code><</code></a>
                     <code id="currentPage">1</code>
-                      <a class="changePage" style="color: black"}"><code>2</code></a>
+                      <a class="changePage" style="color: black"><code>2</code></a>
                     <a class="changePage"style="color: black"><code>></code></a>
                   </div>
                   <form name="pageForm">
