--- a/src/main/resources/templates/admin/activity-review-board.html
+++ b/src/main/resources/templates/admin/activity-review-board.html
@@ -170,7 +170,7 @@
                 <div class="paging" style="text-align: center">
                   <a class="changePage" style="color: black"><code><</code></a>
                   <code id="currentPage">1</code>
-                    <a class="changePage" style="color: black"}"><code>2</code></a>
+                    <a class="changePage" style="color: black"><code>2</code></a>
                   <a class="changePage"style="color: black"><code>></code></a>
                 </div>
                 <form name="pageForm">
@@ -244,9 +244,9 @@
     </section>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="/static/js/admin/app.js"></script>
-  <script src="/static/js/admin/events.js"></script>
-  <script src="/static/js/admin/active-review-board.js"></script>
+  <script src="/js/admin/app.js"></script>
+  <script src="/js/admin/events.js"></script>
+  <script src="/js/admin/active-review-board.js"></script>
   <!-- 웹에디터 API -->
   <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
   <script>
