--- a/src/main/resources/templates/admin/component/sidebar.html
+++ b/src/main/resources/templates/admin/component/sidebar.html
@@ -30,7 +30,7 @@
     </div>
     <div class="sidebar__main">
       <div class="sidebar__logo">
-        <img src="/static/image/logo-test.png" />
+        <img src="/image/logo-test.png"/>
       </div>
       <div class="sidebar__menu-nav">
         <!-- 회원관리 -->
@@ -72,7 +72,7 @@
             <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
           </svg>
         </a>
-        <!-- 봉사 등록 -->
+        <!-- 봉사 관리 -->
         <a href="javascript:void(0)" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
@@ -93,28 +93,6 @@
                 </g>
               </svg>
             </div>
-            <span>봉사 등록</span>
-          </div>
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="512px"
-            id="Layer_1" style="enable-background: new 0 0 512 512" version="1.1" viewBox="0 0 512 512" width="512px"
-            xml:space="preserve">
-            <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
-          </svg>
-        </a>
-        <!-- 봉사관리 -->
-        <a href="javascript:void(0)" class="sidebar__menu">
-          <div class="sidebar__menu__name">
-            <div>
-              <svg id="object" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                <title />
-                <path
-                  d="M23,17a8,8,0,1,0-8-8A8,8,0,0,0,23,17Zm-2-7a1,1,0,0,1-1-1V5.8a1,1,0,0,1,1-1h1.17a1,1,0,0,1,1.92,0H25a1,1,0,0,1,0,2H22V8h3a1,1,0,0,1,1,1v3.2a1,1,0,0,1-1,1h-.91a1,1,0,0,1-1.92,0H21a1,1,0,0,1,0-2h3V10Z" />
-                <path
-                  d="M30.86,24A2.48,2.48,0,0,0,28,22.45l-4,.82a5.72,5.72,0,0,0,0-.58,3,3,0,0,0-3.1-2.92h0a8.08,8.08,0,0,1-3.76-.8l-1.89-.83A2.56,2.56,0,0,0,13.64,18a.66.66,0,0,0-.2.06l-1.24.56a6,6,0,0,1,.28,3.11L11.3,28.07c0,.15-.08.29-.12.44l5.35,2.06a6.09,6.09,0,0,0,2.26.43,6.17,6.17,0,0,0,2.31-.45l8.29-3.36A2.57,2.57,0,0,0,30.86,24Z" />
-                <path
-                  d="M8,17.29l-5.82-.88A1,1,0,0,0,1,17.4v12a1,1,0,0,0,1,1H6.4a3.08,3.08,0,0,0,2.93-2.69l1.18-6.35a3.76,3.76,0,0,0-.61-2.84A2.88,2.88,0,0,0,8,17.29Z" />
-              </svg>
-            </div>
             <span>봉사 관리</span>
           </div>
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="512px"
@@ -123,6 +101,28 @@
             <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
           </svg>
         </a>
+<!--        &lt;!&ndash; 봉사관리 &ndash;&gt;-->
+<!--        <a href="javascript:void(0)" class="sidebar__menu">-->
+<!--          <div class="sidebar__menu__name">-->
+<!--            <div>-->
+<!--              <svg id="object" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">-->
+<!--                <title />-->
+<!--                <path-->
+<!--                  d="M23,17a8,8,0,1,0-8-8A8,8,0,0,0,23,17Zm-2-7a1,1,0,0,1-1-1V5.8a1,1,0,0,1,1-1h1.17a1,1,0,0,1,1.92,0H25a1,1,0,0,1,0,2H22V8h3a1,1,0,0,1,1,1v3.2a1,1,0,0,1-1,1h-.91a1,1,0,0,1-1.92,0H21a1,1,0,0,1,0-2h3V10Z" />-->
+<!--                <path-->
+<!--                  d="M30.86,24A2.48,2.48,0,0,0,28,22.45l-4,.82a5.72,5.72,0,0,0,0-.58,3,3,0,0,0-3.1-2.92h0a8.08,8.08,0,0,1-3.76-.8l-1.89-.83A2.56,2.56,0,0,0,13.64,18a.66.66,0,0,0-.2.06l-1.24.56a6,6,0,0,1,.28,3.11L11.3,28.07c0,.15-.08.29-.12.44l5.35,2.06a6.09,6.09,0,0,0,2.26.43,6.17,6.17,0,0,0,2.31-.45l8.29-3.36A2.57,2.57,0,0,0,30.86,24Z" />-->
+<!--                <path-->
+<!--                  d="M8,17.29l-5.82-.88A1,1,0,0,0,1,17.4v12a1,1,0,0,0,1,1H6.4a3.08,3.08,0,0,0,2.93-2.69l1.18-6.35a3.76,3.76,0,0,0-.61-2.84A2.88,2.88,0,0,0,8,17.29Z" />-->
+<!--              </svg>-->
+<!--            </div>-->
+<!--            <span>봉사 관리</span>-->
+<!--          </div>-->
+<!--          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="512px"-->
+<!--            id="Layer_1" style="enable-background: new 0 0 512 512" version="1.1" viewBox="0 0 512 512" width="512px"-->
+<!--            xml:space="preserve">-->
+<!--            <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />-->
+<!--          </svg>-->
+<!--        </a>-->
         <!-- 문의관리 -->
         <a href="javascript:void(0)" class="sidebar__menu">
           <div class="sidebar__menu__name">
@@ -214,7 +214,31 @@
             <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
           </svg>
         </a>
-        
+         <!-- 공양미 환전 요청 -->
+         <a href="javascript:void(0)" class="sidebar__menu">
+          <div class="sidebar__menu__name">
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.33 19.56">
+                <title />
+                <g data-name="Camada 2" id="Camada_2">
+                  <g data-name="Camada 1" id="Camada_1-2">
+                    <path
+                      d="M18.2,12.81A5.77,5.77,0,0,0,17,12.44a6.47,6.47,0,0,1-.82-.25,1.07,1.07,0,0,1-.42-.27.55.55,0,0,1-.13-.38.57.57,0,0,1,.26-.51,1.29,1.29,0,0,1,.72-.18,1.27,1.27,0,0,1,.7.18.68.68,0,0,1,.33.45.24.24,0,0,0,.24.15h.79a.17.17,0,0,0,.18-.18,1.33,1.33,0,0,0-.22-.63,1.86,1.86,0,0,0-.59-.57,2.3,2.3,0,0,0-.93-.32V9.34a.19.19,0,0,0-.2-.2h-.52a.2.2,0,0,0-.14.05.19.19,0,0,0-.06.15v.58a2.19,2.19,0,0,0-1.29.55,1.46,1.46,0,0,0-.47,1.1,1.35,1.35,0,0,0,.46,1.1,3.54,3.54,0,0,0,1.44.62q.59.16.9.27a1.25,1.25,0,0,1,.46.26.51.51,0,0,1,.15.38.61.61,0,0,1-.3.54,1.58,1.58,0,0,1-.87.2,1.49,1.49,0,0,1-.81-.19.89.89,0,0,1-.39-.48.39.39,0,0,0-.1-.12.27.27,0,0,0-.15,0h-.75a.18.18,0,0,0-.13.05.17.17,0,0,0-.05.12,1.41,1.41,0,0,0,.24.72,1.75,1.75,0,0,0,.65.57,2.68,2.68,0,0,0,1,.29v.58a.19.19,0,0,0,.06.15.2.2,0,0,0,.14.05h.52a.19.19,0,0,0,.2-.2v-.58a2.48,2.48,0,0,0,1.41-.54,1.48,1.48,0,0,0,.52-1.18,1.45,1.45,0,0,0-.21-.81A1.54,1.54,0,0,0,18.2,12.81Z" />
+                    <path
+                      d="M16.67,6.24H14.12V3.67a.5.5,0,0,0-.5-.5H13V.5a.5.5,0,0,0-.5-.5H.5A.5.5,0,0,0,0,.5V3.57a.5.5,0,0,0,.5.5h.66V6.74a.5.5,0,0,0,.5.5h.5V9.32H.66a.5.5,0,0,0-.5.5V19a.5.5,0,0,0,.5.5h12a.5.5,0,0,0,.5-.5v-.51A6.66,6.66,0,1,0,16.67,6.24ZM1,1H12V3.07H1ZM2.16,4.17h11V6.24h-11Zm1,3.07h10a6.7,6.7,0,0,0-2.1,2.07H3.16Zm7,8.22h-9V13.39H10a6.61,6.61,0,0,0,.49,2.07Zm-9-5.15h9.37a6.61,6.61,0,0,0-.5,2.07H1.16Zm11,8.22h-11V16.46h9.89a6.67,6.67,0,0,0,1.07,1.29Zm4.55,0a5.64,5.64,0,0,1-4.89-8.46.49.49,0,0,0,.05-.09,5.64,5.64,0,1,1,4.84,8.55Z" />
+                  </g>
+                </g>
+              </svg>
+            </div>
+            <span>공양미 환전요청</span>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="512px"
+            id="Layer_1" style="enable-background: new 0 0 512 512" version="1.1" viewBox="0 0 512 512" width="512px"
+            xml:space="preserve">
+            <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
+          </svg>
+        </a>
+
          <!-- 후원요청 관리 -->
          <a href="javascript:void(0)" class="sidebar__menu">
           <div class="sidebar__menu__name">
@@ -257,7 +281,7 @@
             <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
           </svg>
         </a>
-        <!-- 봉사 모집 관리 -->
+        <!-- 자유게시판 관리 -->
         <a href="javascript:void(0)" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
@@ -272,7 +296,7 @@
                   d="M487,393.14H408.72V112.82a65.37,65.37,0,0,0-65.3-65.29H81.64a62.47,62.47,0,0,0-7.41.45,4.78,4.78,0,0,0-.53.06C42.44,52,19,79,19,112.82a6,6,0,0,0,6,6h96.16V399.18a65.37,65.37,0,0,0,65.29,65.29H427.75A65.36,65.36,0,0,0,493,399.18,6,6,0,0,0,487,393.14ZM75,60c29.45.12,43.88,22.68,45.93,46.77H31.31C33.76,81.8,51.36,63,75,60Zm58.26,339.16V112.82c0-23-8.78-41.9-23.31-53.23H343.42a53.29,53.29,0,0,1,53.23,53.23V393.14H247.14a6,6,0,0,0-6,6,53.28,53.28,0,0,1-53.22,53.23h-1.45A53.28,53.28,0,0,1,133.22,399.18Zm294.53,53.23H225.64a65.31,65.31,0,0,0,27.26-47.2H480.64A53.32,53.32,0,0,1,427.75,452.41Z" />
               </svg>
             </div>
-            <span>봉사 모집 관리</span>
+            <span>자유게시판 관리</span>
           </div>
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="512px"
             id="Layer_1" style="enable-background: new 0 0 512 512" version="1.1" viewBox="0 0 512 512" width="512px"
