--- a/src/main/resources/templates/admin/gongyangmi-refund.html
+++ b/src/main/resources/templates/admin/gongyangmi-refund.html
@@ -201,7 +201,7 @@
                 <div class="paging" style="text-align: center">
                   <a class="changePage" style="color: black"><code><</code></a>
                   <code id="currentPage">1</code>
-                    <a class="changePage" style="color: black"}"><code>2</code></a>
+                    <a class="changePage" style="color: black"><code>2</code></a>
                   <a class="changePage"style="color: black"><code>></code></a>
                 </div>
                 <form name="pageForm">
