--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -85,8 +85,8 @@
                         </div>
                         <div class="main-first-wrapper sbs">
                             <div class="main-first-list-title">
-                                봉사 추천
-                                <a class="total-funding-link" href="#" title="전체보기">전체보기</a>
+                                봉사 활동
+                                <a class="total-funding-link" href="/volunteer-work/work-list" title="전체보기">전체보기</a>
                             </div>
                             <div class="main-first-list-wrapper">
                                 <div class="main-first-list-layout">
@@ -633,7 +633,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a class="view-total-list-button view-total-list-button-color" href="#">전체보기</a>
+                                <a class="view-total-list-button view-total-list-button-color" href="/community/free-board">전체보기</a>
                             </div>
                             <div class="main-content-list-wrapper">
                                 <div class="container-component main-content-slider-banner-container">
@@ -997,7 +997,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a class="view-total-list-button view-total-list-button-color" href="#">전체보기</a>
+                                <a class="view-total-list-button view-total-list-button-color" href="/funding/funding-list">전체보기</a>
                             </div>
                             <div class="main-content-list-wrapper">
                                 <div class="container-component main-content-slider-banner-container">
