--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -8,16 +8,17 @@
     <title>봉사 상세보기</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/volunteer-work/work-detail-response.css">
     <link rel="stylesheet" href="/css/volunteer-work/work-detail.css">
+    <link rel="stylesheet" href="/css/volunteer-work/work-apply.css">
 
 </head>
 <body>
     
      <!-- 헤더 임시 -->
      <header th:insert="~{main/header.html :: mainHeader}"></header>
-
-
+     <div th:replace="~{volunteer-work/work-apply-modal.html :: applyLayout}"></div>
      <!-- contents -->
             <div>
                 <div class="content-container">
@@ -459,6 +460,7 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
+<script src="/js/volunteer-work/work-apply-modal.js"></script>
 
 
             
