--- a/src/main/resources/templates/volunteer-work/work.html
+++ b/src/main/resources/templates/volunteer-work/work.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 봉사 목록</title>
-    <link rel="stylesheet" href="../../static/css/volunteer-work/work.css">
-    <link rel="stylesheet" href="../../static/css/font/font.css">
-    <link rel="stylesheet" href="../../static/css/main/header.css">
-    <link rel="stylesheet" href="../../static/css/main/footer.css">
+    <link rel="stylesheet" href="/css/volunteer-work/work.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
 </head>
 <body>
     <!-- 헤더 -->
     <div class="full-screen">
-        <header id="_header"></header>
+        <header th:insert="~{main/header.html :: mainHeader}"></header>
     </div>
     
     <!-- 전체 div -->
@@ -187,14 +187,8 @@
     </div>
     <!-- 푸터 -->
     <div class="full-screen">
-        <footer id="_footer"></footer>
+        <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#_header').load('../main/header.html');
-        $('#_footer').load('../main/footer.html');
-    });
-</script>
 </html>
