--- a/src/main/resources/templates/support/support-success.html
+++ b/src/main/resources/templates/support/support-success.html
@@ -9,16 +9,17 @@
     <title>후원 완료</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/funding/funding-result.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
 </head>
 
 <body>
     <div id="react-view" class="view">
         <div class="header">
-            <div
-                class="componentContain logoHeader">
+            <div class="componentContain logoHeader">
                 <a href="/">
                     <div class="logo logoStyle">
-                        <img src="/static/image/logo-test.png" style="width: 126px; height: 41px;">
+                        <img src="/image/logo-test.png" style="width: 126px; height: 41px;">
                         <!-- <svg id="tumblbug_logo" viewBox="0 0 107.89 28.39">
                             <title>심봉사 후원</title>
                             <path
@@ -87,7 +88,7 @@
                     </div>
                 </div>
             </div>
-<!--            <footer th:insert="~{main/footer.html :: mainFooter}"></footer>-->
+            <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
 
 
         </div>
