--- a/src/main/resources/templates/support/support-write.html
+++ b/src/main/resources/templates/support/support-write.html
@@ -8,6 +8,8 @@
     <title>후원요청하기</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/support/support-write.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
      <!-- 웹에디터 API -->
      <link
      href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css"
@@ -52,7 +54,7 @@
                             </div>
                         </div>
                         <!-- 내용 -->
-                        <div class="qna-content-input-layout">
+                        <div class="qna-content-input-layout" style="margin-left: 137px;">
                             <div class="qna-original-input-layout">
 <!--                                <div class="qna-write-content-title-div">-->
 <!--                                    <label for="inquiry-contents">-->
