--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -430,7 +430,7 @@
 
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/support/supportDetail.js"></script>
+<script src="/js/support/supportDetail.js"></script>
 <script src="/js/main/header.js"></script>
 <script src="/js/support/support-rice-modal.js"></script>
 </html>
