inquiry, user, ricePayment 작업중

--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -34,22 +34,22 @@
           <!-- status.css -->
           <section class="trip-status">
             <ul class="status-list">
-              <li class="status-list-item">
-                <div class="status-item-wrapper">
-                  <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="36" height="36" rx="12" fill="#EDFEE0"></rect>
-                    <path
-                      d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z"
-                      fill="#11CA2D"></path>
-                    <path d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z" fill="#11CA2D">
-                    </path>
-                  </svg>
-                  <div class="status-item-name">금일 신규회원</div>
-                </div>
-                <div class="status-item-count">
-                  <a href="">0</a>
-                </div>
-              </li>
+<!--              <li class="status-list-item">-->
+<!--                <div class="status-item-wrapper">-->
+<!--                  <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+<!--                    <rect width="36" height="36" rx="12" fill="#EDFEE0"></rect>-->
+<!--                    <path-->
+<!--                      d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z"-->
+<!--                      fill="#11CA2D"></path>-->
+<!--                    <path d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z" fill="#11CA2D">-->
+<!--                    </path>-->
+<!--                  </svg>-->
+<!--                  <div class="status-item-name">금일 신규회원</div>-->
+<!--                </div>-->
+<!--                <div class="status-item-count">-->
+<!--                  <a href="">0</a>-->
+<!--                </div>-->
+<!--              </li>-->
               <li class="status-list-item">
                 <div class="status-item-wrapper">
                   <div class="problem-icon-wrapper">
