--- a/src/main/resources/templates/mypage/support-request.html
+++ b/src/main/resources/templates/mypage/support-request.html
@@ -29,7 +29,7 @@
                                     <div class="support-request-title">높이 올라가</div>
                                 </div>
                                 <div class="support-request-content">세상을 다 가져봐</div>
-                                <div class="support-request-reply">댓글 1</div>
+                                <!--<div class="support-request-reply">댓글 1</div>-->
                             </div>
                             <div class="support-request-detail">
                                 <button class="go-support-request">
@@ -47,7 +47,6 @@
                                     <div class="support-request-title">높이 올라가</div>
                                 </div>
                                 <div class="support-request-content">세상을 다 가져봐</div>
-                                <div class="support-request-reply">댓글 1</div>
                             </div>
                             <div class="support-request-detail">
                                 <button class="go-support-request">
