--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -122,13 +122,10 @@
                         <div class="action-area">
                             <ul class="tab-list">
                                 <li class="tab-item">
-                                    <button id="comment-id-button" class="tab-button" type="button" aria-selected="true">댓글</button>
-                                </li>
-                                <li class="tab-item">
-                                    <button id="join-id-button" class="tab-button" type="button" aria-selected="false">참여내역</button>
+                                    <button id="join-id-button" class="tab-button" type="button">참여내역</button>
                                 </li>
                             </ul>
-                            <div id="comment-tabpanel" class="comment-wrap" aria-hidden="false">
+                            <!--<div id="comment-tabpanel" class="comment-wrap" aria-hidden="false">
                                 <div id="comment-box-module" class="comment-box">
                                     <div class="comment-box-wrap">
                                         <div class="comment-box-head">
@@ -144,7 +141,7 @@
                                         <div class="comment-box-notice"></div>
                                         <div class="comment-box-content-wrap" tableindex="0" style="outline: 0;">
                                             <ul class="comment-box-list">
-                                                <!-- 댓글목록 -->
+                                                &lt;!&ndash; 댓글목록 &ndash;&gt;
                                                 <li class="comment-box-li">
                                                     <div class="comment-box-comment-container">
                                                         <div class="comment-box-area">
@@ -272,10 +269,10 @@
 
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
 
                             <!-- 참여내역 -->
-                            <div id="history-tabpanel" class="history-wrap" aria-hidden="true">
+                            <div id="history-tabpanel" class="history-wrap">
                                 <h5 class="blind">참여 내역</h5>
                                 <div class="history-title">
                                     <p class="history-title-inner">
