--- a/src/main/resources/static/css/volunteer-work/work-apply.css
+++ b/src/main/resources/static/css/volunteer-work/work-apply.css
@@ -1,20 +1,28 @@
 @charset "utf-8";
+body {
+    margin: 0;
+    background-color: white;
+}
 
 .apply-layout {
-    position: relative;
+    /*position: relative;*/
     background: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 15px 12px lightgrey;
     margin: 0 auto;
-    margin-top: 58px;
+    margin-top: 16rem;
+    /*margin: 10% auto;*/
     display: block; 
     width: 358px;
     height: 353px;
+    position: fixed;
+    z-index: 9999!important;
 }
 
 .apply-container {
-    position: relative;
+    position: fixed;
     box-sizing: border-box;
+    z-index: 20;
 }
 
 
