--- a/src/main/resources/templates/admin/volunteer-recruitment-board.html
+++ b/src/main/resources/templates/admin/volunteer-recruitment-board.html
@@ -14,10 +14,9 @@
     <link rel="stylesheet" href="/css/admin/sidebar.css" />
     <link rel="stylesheet" href="/css/admin/content.css" />
     <link rel="stylesheet" href="/css/admin/status.css" />
+    <link rel="stylesheet" href="/css/admin/storage-modal.css" />
     <link rel="stylesheet" href="/css/admin/volunteer-recruitment-modal.css" />
     <link rel="stylesheet" href="/css/admin/paging.css">
-    <!-- 웹에디터 API -->
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet" />
   </head>
   <body>
     <section class="main">
@@ -226,8 +225,67 @@
                     <input type="date" />
                   </div>
                 </div>
-                <div class="notice__content">
-                  <textarea id="summernote" name="editordata"></textarea>
+                <div class="content__img__wrap">
+                  <!-- 임시로 name='file' 해둠 -->
+                  <label>
+                    <div class="content__img">
+                      <img
+                              src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                    </div>
+                    <input type="file" name="file" style="display: none" />
+                  </label>
+                  <label>
+                    <div class="content__img">
+                      <img
+                              src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                    </div>
+                    <input type="file" name="file" style="display: none" />
+                  </label>
+                  <label>
+                    <div class="content__img">
+                      <img
+                              src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                    </div>
+                    <input type="file" name="file" style="display: none" />
+                  </label>
+                  <label>
+                    <div class="content__img">
+                      <img
+                              src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                    </div>
+                    <input type="file" name="file" style="display: none" />
+                  </label>
+                  <label>
+                    <div class="content__img">
+                      <img
+                              src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                    </div>
+                    <input type="file" name="file" style="display: none" />
+                  </label>
+                  <label>
+                    <div class="content__img">
+                      <img
+                              src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                    </div>
+                    <input type="file" name="file" style="display: none" />
+                  </label>
+                  <label>
+                    <div class="content__img">
+                      <img
+                              src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                    </div>
+                    <input type="file" name="file" style="display: none" />
+                  </label>
+                  <label>
+                    <div class="content__img">
+                      <img
+                              src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                    </div>
+                    <input type="file" name="file" style="display: none" />
+                  </label>
+                </div>
+                <div class="content__intput input_box_shadow" style="margin-left: 6px;">
+                  <textarea></textarea>
                 </div>
               </div>
               <div class="user__profile__button">
@@ -250,23 +308,4 @@
   <script src="/js/admin/app.js"></script>
   <script src="/js/admin/events.js"></script>
   <script src="/js/admin/volunteer-recruitment-board.js"></script>
-  <!-- 웹에디터 API -->
-  <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
-  <script>
-    console.log('썸머노트');
-    $('#summernote').summernote({
-      placeholder: '게시판 내용 작성',
-      tabsize: 2,
-      height: 300,
-      width: '100%',
-      toolbar: [
-        ['style', ['style']],
-        ['font', ['bold', 'underline', 'clear']],
-        ['color', ['color']],
-        ['para', ['ul', 'ol', 'paragraph']],
-        ['table', ['table']],
-        ['insert', ['link', 'picture', 'video']],
-      ],
-    });
-  </script>
 </html>
