마이페이지 html 수정

--- a/src/main/resources/static/css/mypage/mypage-header.css
+++ b/src/main/resources/static/css/mypage/mypage-header.css
@@ -189,8 +189,9 @@ button {
 }
 
 .header-menu-a:hover {
-    font-weight: bold;
+    font-weight: 700;
     color: rgb(61, 61, 61);
+    opacity: 0.7;
 }
 
 .header-menu-a-select {
