--- a/src/main/resources/templates/mypage/mypage-header.html
+++ b/src/main/resources/templates/mypage/mypage-header.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/mypage/mypage-header.css">
 </head>
 <body>
-    <div th:fragment="mypageHeader" class="mypage-header-wrap">
+    <div class="mypage-header-wrap">
         <div class="mypage-header-container">
             <div class="mypage-header">
                 <div class="mypage-header-left">
@@ -39,7 +39,7 @@
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="/mypage/my-review" class="header-menu-a">작성한 후기</a>
+                            <a href="/mypage/my-review" class="header-menu-a">작성한 게시물</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
