--- a/src/main/resources/templates/mypage/my-review.html
+++ b/src/main/resources/templates/mypage/my-review.html
@@ -17,12 +17,85 @@
         <!-- 헤더 임시 -->
         <header th:insert="~{main/header.html :: mainHeader}"></header>
 
-        <div th:insert="~{mypage/mypage-header.html :: mypageHeader}"></div>
+        <!-- 마이페이지 헤더 -->
+        <div class="mypage-header-wrap">
+            <div class="mypage-header-container">
+                <div class="mypage-header">
+                    <div class="mypage-header-left">
+                        <div class="my-rank">
+                            <img src="https://i.namu.wiki/i/67tjhRLuCX7MYeLY5p94GgXYHP7v1dMQ5M0QP8emeuw3IvlZlQNZBgeKz5qj8P_3ll2AF97RWC_isDEnrT4kgeBMW1GU39jR-Wn92gD-XSt5J1HbKiRxpRt8ZRaq8dvGHUMTt_clauEc9TOx_JyIaQ.webp" alt="">
+                        </div>
+                        <div class="mypage-info">
+                            <div class="info-name">정현진</div>
+                            <div class="info-rice">
+                                <p>내 공양미 : 300석</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rice-charge-wrap">
+                        <button type="button" class="rice-charge">
+                            <div class="rice-charge-text">공양미 충전</div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="header-menu-wrap">
+                <div class="header-menu">
+                    <div class="header-menu-inner">
+                    <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/support-request" class="header-menu-a">후원 요청 목록</a>
+                        </div>
+                    </span>
+                        <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/my-review" class="header-menu-a-select">작성한 게시물</a>
+                        </div>
+                    </span>
+                        <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/my-question" class="header-menu-a">내 문의사항</a>
+                        </div>
+                    </span>
+                        <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/volunteer-work-list" class="header-menu-a">봉사활동 내역</a>
+                        </div>
+                    </span>
+                        <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/my-support-list" class="header-menu-a">후원내역</a>
+                        </div>
+                    </span>
+                        <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/my-funding-list" class="header-menu-a">펀딩내역</a>
+                        </div>
+                    </span>
+                        <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/rice-list" class="header-menu-a">공양미 내역</a>
+                        </div>
+                    </span>
+                        <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/exchange-request" class="header-menu-a">공양미 환전요청</a>
+                        </div>
+                    </span>
+                        <span class="header-menu-element">
+                        <div class="header-menu-div">
+                            <a href="/mypage/user-modify" class="header-menu-a">회원정보 수정</a>
+                        </div>
+                    </span>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="main-wrap">
             <div class="my-review-wrap">
                 <div class="my-review-count-wrap">
-                    <em class="my-review-count">50</em>개의 리뷰가 있습니다.
+                    <em class="my-review-count">50</em>개의 게시물이 있습니다.
                 </div>
                 <div class="my-review-list">
                     <div>
@@ -79,6 +152,7 @@
                         <div class="review-main-footer">
                             <div class="review-write-date">
                                 <span>2023.04.19</span>
+                                <span>자유게시판</span>
                             </div>
                         </div>
                     </div>
@@ -136,6 +210,7 @@
                         <div class="review-main-footer">
                             <div class="review-write-date">
                                 <span>2023.04.19</span>
+                                <span>후기게시판</span>
                             </div>
                         </div>
                     </div>
@@ -193,6 +268,7 @@
                         <div class="review-main-footer">
                             <div class="review-write-date">
                                 <span>2023.04.19</span>
+                                <span>자유게시판</span>
                             </div>
                         </div>
                     </div>
@@ -250,6 +326,7 @@
                         <div class="review-main-footer">
                             <div class="review-write-date">
                                 <span>2023.04.19</span>
+                                <span>후기게시판</span>
                             </div>
                         </div>
                     </div>
@@ -284,6 +361,82 @@
                     </div>
                 </li>
             </ul>
+        </div>
+
+        <!--삭제모달-->
+        <div class="change-modal" id="modal" style="display: none;">
+            <div class="change-modal-root"></div>
+            <div class="change-modal-container">
+                <div class="change-modal-wrapper">
+                    <div>
+                        <div class="change-modal-title-row">
+                            <h4 class="change-modal-title-text">1:1 문의내역</h4>
+                            <!-- x버튼 -->
+                            <div class="modal-close">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                    <g fill="none" fill-rule="evenodd">
+                                        <g>
+                                            <g>
+                                                <g>
+                                                    <path fill="#fff" fill-opacity="0" d="M0 0H32V32H0z" transform="translate(-884 -270) translate(500 240) translate(384 30)"></path>
+                                                    <g stroke="#999" stroke-linecap="round">
+                                                        <path d="M20 20L0 0M0 20L20 0" transform="translate(-884 -270) translate(500 240) translate(384 30) translate(6 6)"></path>
+                                                    </g>
+                                                    <g fill="#999">
+                                                        <path d="M.784.089l.07.057L10.5 9.793 20.146.146c.196-.195.512-.195.708 0 .173.174.192.443.057.638l-.057.07-9.647 9.646 9.647 9.646c.195.196.195.512 0 .708-.174.173-.443.192-.638.057l-.07-.057-9.646-9.647-9.646 9.647c-.196.195-.512.195-.708 0-.173-.174-.192-.443-.057-.638l.057-.07L9.793 10.5.146.854C-.049.658-.049.342.146.146.32-.027.59-.046.784.09z" transform="translate(-884 -270) translate(500 240) translate(384 30) translate(5.5 5.5)"></path>
+                                                    </g>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
+                        </div>
+                        <form action="" class="change-modal-form-wrapper">
+                            <div class="change-modal-form-row">
+                                <span class="change-modal-form-label">제목</span>
+                                <div class="change-modal-form-field">
+                                    <div class="change-modal-form-title">
+                                        <input type="text" placeholder="제목을 입력해주세요." class="change-modal-form-title-input">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="change-modal-form-row">
+                                <span class="change-modal-form-label">내용</span>
+                                <div class="change-modal-form-field">
+                                    <div class="change-modal-form-field-container">
+                                        <textarea inputmode="text" class="change-modal-form-field-text"></textarea>
+                                        <span class="change-modal-form-field-content">
+                                            <span style="color: rgb(51, 51, 51);">0자</span>
+                                            <span style="color: rgb(153, 153, 153);"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                        <div class="change-modal-actions-row">
+                            <button type="submit" class="change-modal-ok-btn">
+                                <span class="change-modal-btn">수정</span>
+                            </button>
+                            <button type="button" class="change-modal-delete-btn">
+                                <span class="change-modal-btn">취소</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="delete-modal-wrap">
+            <div class="modal-container">
+                <div class="modal">
+                    <div class="modal-content">정말로 삭제하시겠습니까?</div>
+                    <div class="modal-ok-div">
+                        <button type="button" class="modal-button modal-ok">확인</button>
+                        <button type="button" class="modal-button modal-cancel">취소</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- 사진 모달 -->
