--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -23,7 +23,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="header-button">펀딩하기</div>
+                        <div class="header-button"><a href="/funding/funding-start">펀딩하기</a></div>
                         <!-- <div class="icon-wrapper">
                             <svg class="like-icon" width="48" height="48" fill="none">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M23.9996 13.623L20.6051 10.5561C17.2106 7.48978 11.57 8.17753 8.48147 11.5785C4.60233 15.6667 4.60214 22.5859 8.70675 26.9121L24 41.8811L39.2923 26.9121C43.3969 22.5859 43.3971 15.6675 39.5176 11.5785C36.4291 8.17753 30.7888 7.48991 27.3942 10.5561L23.9996 13.623ZM37.0081 24.6701C39.9446 21.533 39.8523 16.5805 37.1962 13.781L37.1721 13.7556L37.1487 13.7298C35.0533 11.4225 31.4219 11.2305 29.5394 12.9306L23.9996 17.9356L18.4601 12.9308C16.5777 11.2306 12.9458 11.4224 10.8504 13.7298L10.8269 13.7557L10.8028 13.7811C8.14716 16.5799 8.05453 21.533 10.9909 24.6701L23.9999 37.4033L37.0081 24.6701Z" fill="black"></path>
@@ -67,12 +67,12 @@
                             <div class="category-wrapper">복지센터</div>
                             <div class="category-wrapper">심봉사소개</div>
                         </div>
-<!--                        <div class="search-input-wrapper">-->
-<!--                            <input class="search-input" type="text" placeholder="검색어를 입력해주세요.">-->
-<!--                            <div class="search-button">-->
-<!--                                <svg class="search-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M29.9979 32.9819C27.3165 34.9694 23.9582 36.0788 20.3642 35.9089C12.0892 35.5176 5.69811 28.4922 6.08938 20.2171C6.48064 11.9421 13.5061 5.55107 21.7811 5.94234C30.0561 6.33361 36.4472 13.359 36.0559 21.6341C35.889 25.1636 34.5152 28.3505 32.3522 30.8144L39.4908 38.6856L37.1205 40.8353L29.9979 32.9819ZM32.6597 21.4735C32.3571 27.8728 26.9241 32.8152 20.5248 32.5127C14.1254 32.2101 9.183 26.7771 9.48558 20.3777C9.78816 13.9784 15.2212 9.03597 21.6205 9.33855C28.0199 9.64113 32.9623 15.0741 32.6597 21.4735Z" fill="black"></path></svg>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <div class="search-input-wrapper">
+                            <input class="search-input" style="width: 150px;" type="text" placeholder="진행 중인 봉사를 찾아보세요.">
+                            <div class="search-button">
+                                <svg class="search-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M29.9979 32.9819C27.3165 34.9694 23.9582 36.0788 20.3642 35.9089C12.0892 35.5176 5.69811 28.4922 6.08938 20.2171C6.48064 11.9421 13.5061 5.55107 21.7811 5.94234C30.0561 6.33361 36.4472 13.359 36.0559 21.6341C35.889 25.1636 34.5152 28.3505 32.3522 30.8144L39.4908 38.6856L37.1205 40.8353L29.9979 32.9819ZM32.6597 21.4735C32.3571 27.8728 26.9241 32.8152 20.5248 32.5127C14.1254 32.2101 9.183 26.7771 9.48558 20.3777C9.78816 13.9784 15.2212 9.03597 21.6205 9.33855C28.0199 9.64113 32.9623 15.0741 32.6597 21.4735Z" fill="black"></path></svg>
+                            </div>
+                        </div>
                     </div>
                     <div class="extended-category-section category-extend-select">
                         <!-- <div class="extended-categeory-header">
