--- a/src/main/resources/templates/support/support-rice-modal.html
+++ b/src/main/resources/templates/support/support-rice-modal.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="/css/main/footer.css">
 </head>
 <body>
-    <button id="support-open">후원하기</button>
-    <div class="support-rice-layout" th:fragment="supportRiceLayout" style="display: none;">
+    <button id="support-open" >후원하기</button>
+    <div class="support-layout" th:fragment="supportRiceLayout" style="display: none;">
+    <div class="support-rice-layout">
         <!-- <form name=""> -->
             <div class="suppport-rice-container">
                 <div class="support-rice-close-btn-layout">
@@ -31,6 +32,7 @@
                     </button>
                 </div>
             <!-- </form> -->
+    </div>
     </div>
     
 
