--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -27,8 +27,8 @@
                          <div class="work-detail-list-btn-wrap">
                              <div style="justify-content: center; display: flex; margin: 16px; ">
                                  <button type="button" class="list-btn" id="" name="">
-                                                    <span>목록</span>
-                                                </button>
+                                        <a href="/volunteer-work/work-list"><span>목록</span></a>
+                                </button>
                              </div>
 
                              <a class="work-list-prev-btn board_prev" id="board_prev">
