관리자 페이지 작업 중

--- a/src/main/resources/templates/customerCenter/faq-detail.html
+++ b/src/main/resources/templates/customerCenter/faq-detail.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>faq 상세보기</title>
     <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/customerCenter/faq-detail.css">
     <link rel="stylesheet" href="/css/customerCenter/faq-detail-response.css">
@@ -214,5 +215,6 @@
             </footer>
         </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
 </html>
