--- a/src/main/resources/templates/customerCenter/notice.html
+++ b/src/main/resources/templates/customerCenter/notice.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>공지사항 | 텀블벅 - 크리에이터를 위한 크라우드펀딩</title>
-    <link rel="stylesheet" href="/static/css/main/header.css">
-    <link rel="stylesheet" href="../../static/css/customerCenter/notice.css">
-    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="stylesheet" href="/css/customerCenter/notice.css">
+    <link rel="stylesheet" href="/css/font/font.css">
 
 </head>
 <body>
@@ -174,5 +175,6 @@
         <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
 </html>
