--- a/src/main/resources/templates/customerCenter/search.html
+++ b/src/main/resources/templates/customerCenter/search.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>공지사항 | 텀블벅 - 크리에이터를 위한 크라우드펀딩</title>
     <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/customerCenter/notice.css">
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/customerCenter/search.css">
@@ -127,5 +128,6 @@
         <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
 </html>
