--- a/src/main/resources/templates/customerCenter/faq.html
+++ b/src/main/resources/templates/customerCenter/faq.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>소통하고 전달하기 - 텀블벅 헬프센터</title>
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/customerCenter/faq.css">
     <link rel="stylesheet" href="/css/font/font.css">
 
