--- a/src/main/resources/templates/customerCenter/inquiry-write.html
+++ b/src/main/resources/templates/customerCenter/inquiry-write.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>문의하기</title>
-    <link rel="stylesheet" href="/static/css/font/font.css">
-    <link rel="stylesheet" href="/static/css/customerCenter/inquiry-write.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/customerCenter/inquiry-write.css">
 </head>
 <body>
 
@@ -60,7 +60,7 @@
                                                          <div class="inquiry-title-one">심봉사 — 당신의 마음이 한 사람의 빛을 만듭니다</div>
 
                                                     <div size="96" class="inquiry-logo-wrap">
-                                                        <img width="96" height="96" src="../../static/image/logo-white.jpg">
+                                                        <img width="96" height="96" src="/image/logo-white.jpg">
                                                     </div>
 
                                                     <div class="inquiry-title-container">
@@ -159,6 +159,6 @@
         clock();
         setInterval(clock, 1000); // 1초마다 실행
 </script>
-<script src="/static/js/customerCenter/inquiry-write.js"></script>
+<script src="/js/customerCenter/inquiry-write.js"></script>
 
 </html>
