--- a/src/main/resources/templates/customerCenter/notice-detail.html
+++ b/src/main/resources/templates/customerCenter/notice-detail.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/customerCenter/notice-detail.css">
     <link rel="stylesheet" href="/css/customerCenter/notice.css">
@@ -77,5 +79,6 @@
         </button>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
 </html>
