펀딩 기프트 아이템 단위테스트 작업중 페이지 연결완료

--- a/src/main/resources/templates/funding/funding-gift.html
+++ b/src/main/resources/templates/funding/funding-gift.html
@@ -97,7 +97,7 @@
                                 </div>
                                 선물
                             </button>
-                            <a href="/templates/funding/funding-item.html">
+                            <a href="/funding/funding-item">
                             <button type="button" class="isActive">
                                 <div name="list-solid" class="iconSVG">
                                     <svg viewBox="0 0 48 48">
