--- a/src/main/resources/templates/funding/funding-item.html
+++ b/src/main/resources/templates/funding/funding-item.html
@@ -57,27 +57,27 @@
                     <div class="plan-depthWrap">
                         <ul class="tap-item">
                             <li class="tapItem-li initialInfo">
-                                <a class="" href="/templates/funding/funding-initial-info.html">기본정보
+                                <a class="" href="/funding/funding-initial-info">기본정보
                                     <span class="item-span"></span>
                                 </a>
                             </li>
                             <li class="item-li fundingPlan">
-                                <a class="" href="/templates/funding/funding-plan.html">펀딩 계획
+                                <a class="" href="/funding/funding-plan">펀딩 계획
                                     <span class="Item-span"></span>
                                 </a>
                             </li>
                             <li class="item-li fundingGift">
-                                <a class="" href="/templates/funding/funding-gift.html">선물 구성
+                                <a class="" href="/funding/funding-gift">선물 구성
                                     <span class="Item-span"></span>
                                 </a>
                             </li>
                             <li class="item-li projectPlan">
-                                <a class="" href="/templates/funding/funding-project-plan.html">프로젝트 계획
+                                <a class="" href="/funding/funding-project-plan">프로젝트 계획
                                     <span class="Item-span"></span>
                                 </a>
                             </li>
                             <li class="item-li createrInfo">
-                                <a class="" href="/templates/funding/funding-creater-info.html">창작자 정보
+                                <a class="" href="/funding/funding-creater-info">창작자 정보
                                     <span class="Item-span"></span>
                                 </a>
                             </li>
@@ -92,7 +92,7 @@
                 <div class="subTapWrap">
                     <div class="subTap">
                         <div class="subTabInner">
-                            <a href="/templates/funding/funding-gift.html">
+                            <a href="/funding/funding-gift">
                                 <button type="button" class="">
                                     <div name="reward-solid" class="iconSVG">
                                         <svg viewBox="0 0 48 48">
